# fdf

./: CMakeLists.txt  Makefile  README.md
inc/: fdf.h
libft/: Makefile  author
libft/inc/: get_next_line.h  libft.h
libft/src/: .gitignore  ft_abs.c  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstadd_last.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstrev.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_pow.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  (+27 more)
minilibx/: Makefile  mlx_rgb.h  mlx_xpm.c
printf/: Makefile
printf/inc/: ft_printf.h  libft.h
printf/src/: ft_abs.c  ft_atoi.c  ft_bzero.c  ft_colors.c  ft_dtoa.c  ft_int_length_base.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstadd_last.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstrev.c  ft_ltoa.c  ft_max.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_mng_float.c  ft_mng_params.c  ft_pow.c  ft_print_arg.c  ft_print_char.c  ft_print_float.c  ft_print_float_concat.c  ft_print_float_determ.c  ft_print_float_spec.c  (+49 more)
src/: color.c  debug.c  dll.c  dll2.c  image.c  init.c  input.c  keys.c  keys2.c  main.c  matrixes.c  projections.c  projections2.c  terminate.c  transform.c  transform2.c
test_maps/: pyramide.fdf
