cmake_minimum_required(VERSION 3.15)
project(fdf C)

set(CMAKE_C_STANDARD 11)

include_directories(inc)
include_directories(minilibx)
include_directories(printf/inc)

add_executable(fdf
    inc/fdf.h
    minilibx/font.c
    minilibx/mlx.h
    minilibx/mlx_init_loop.m
    minilibx/mlx_int.h
    minilibx/mlx_int_str_to_wordtab.c
    minilibx/mlx_new_image.m
    minilibx/mlx_new_window.h
    minilibx/mlx_new_window.m
    minilibx/mlx_rgb.h
    minilibx/mlx_shaders.c
    minilibx/mlx_xpm.c
    printf/inc/ft_printf.h
    printf/inc/libft.h
    printf/src/ft_abs.c
    printf/src/ft_atoi.c
    printf/src/ft_bzero.c
    printf/src/ft_colors.c
    printf/src/ft_dtoa.c
    printf/src/ft_int_length_base.c
    printf/src/ft_isalnum.c
    printf/src/ft_isalpha.c
    printf/src/ft_isascii.c
    printf/src/ft_isdigit.c
    printf/src/ft_isprint.c
    printf/src/ft_isspace.c
    printf/src/ft_itoa.c
    printf/src/ft_lstadd.c
    printf/src/ft_lstadd_last.c
    printf/src/ft_lstdel.c
    printf/src/ft_lstdelone.c
    printf/src/ft_lstiter.c
    printf/src/ft_lstmap.c
    printf/src/ft_lstnew.c
    printf/src/ft_lstrev.c
    printf/src/ft_ltoa.c
    printf/src/ft_max.c
    printf/src/ft_memalloc.c
    printf/src/ft_memccpy.c
    printf/src/ft_memchr.c
    printf/src/ft_memcmp.c
    printf/src/ft_memcpy.c
    printf/src/ft_memdel.c
    printf/src/ft_memmove.c
    printf/src/ft_memset.c
    printf/src/ft_mng_float.c
    printf/src/ft_mng_params.c
    printf/src/ft_pow.c
    printf/src/ft_print_arg.c
    printf/src/ft_print_char.c
    printf/src/ft_print_float.c
    printf/src/ft_print_float_concat.c
    printf/src/ft_print_float_determ.c
    printf/src/ft_print_float_spec.c
    printf/src/ft_print_int_0.c
    printf/src/ft_print_int_1.c
    printf/src/ft_print_oct_hex.c
    printf/src/ft_print_str.c
    printf/src/ft_printf.c
    printf/src/ft_putchar.c
    printf/src/ft_putchar_fd.c
    printf/src/ft_putendl.c
    printf/src/ft_putendl_fd.c
    printf/src/ft_putnbr.c
    printf/src/ft_putnbr_fd.c
    printf/src/ft_putstr.c
    printf/src/ft_putstr_fd.c
    printf/src/ft_read_params.c
    printf/src/ft_strcat.c
    printf/src/ft_strchr.c
    printf/src/ft_strchrn.c
    printf/src/ft_strclr.c
    printf/src/ft_strcmp.c
    printf/src/ft_strcpy.c
    printf/src/ft_strdel.c
    printf/src/ft_strdup.c
    printf/src/ft_strequ.c
    printf/src/ft_striter.c
    printf/src/ft_striteri.c
    printf/src/ft_strjoin.c
    printf/src/ft_strlcat.c
    printf/src/ft_strlen.c
    printf/src/ft_strmap.c
    printf/src/ft_strmapi.c
    printf/src/ft_strncat.c
    printf/src/ft_strncmp.c
    printf/src/ft_strncpy.c
    printf/src/ft_strnequ.c
    printf/src/ft_strnew.c
    printf/src/ft_strnstr.c
    printf/src/ft_strrchr.c
    printf/src/ft_strrev.c
    printf/src/ft_strsplit.c
    printf/src/ft_strstr.c
    printf/src/ft_strsub.c
    printf/src/ft_strtolower.c
    printf/src/ft_strtoupper.c
    printf/src/ft_strtrim.c
    printf/src/ft_tolower.c
    printf/src/ft_toupper.c
    printf/src/ft_wordlen.c
    printf/src/ft_wrdcnt.c
    printf/src/get_next_line.c
    src/color.c
    src/debug.c
    src/dll.c
    src/dll2.c
    src/image.c
    src/init.c
    src/input.c
    src/keys.c
    src/keys2.c
    src/main.c
    src/projections.c
    src/terminate.c
    src/transform.c
    src/transform2.c)

target_link_libraries(fdf "-framework AppKit")
target_link_libraries(fdf "-framework OpenGL")